--- a/android/material-showcase/gradle/wrapper/gradle-wrapper.properties
+++ b/android/material-showcase/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,8 @@
-#Sun Jan 31 23:07:35 PST 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+#distributionUrl=https\://services.gradle.org/distributions/gradle-8.5-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.5.1-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.0.2-all.zip
