--- a/android/material-showcase/app/build.gradle
+++ b/android/material-showcase/app/build.gradle
@@ -1,16 +1,105 @@
+//apply plugin: 'com.android.application'
+//apply plugin: 'kotlin-android'
+//apply plugin: 'kotlin-android-extensions'
+//
+//android {
+//    namespace "com.google.mlkit.md" // Use your package name from AndroidManifest.xml
+//
+//    // Update compileSdkVersion and targetSdkVersion
+//    compileSdkVersion 34
+//    defaultConfig {
+//        applicationId "com.google.mlkit.md"
+//        minSdkVersion 21
+//        targetSdkVersion 34 // Updated from 31 to 33
+//        versionCode 1
+//        versionName "1.0"
+//        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+//        vectorDrawables.useSupportLibrary = true
+//        multiDexEnabled true
+//    }
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//        }
+//    }
+//
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_1_8
+//        targetCompatibility JavaVersion.VERSION_1_8
+//    }
+//    kotlinOptions {
+//        jvmTarget = "1.8"
+//    }
+//
+//    aaptOptions {
+//        noCompress "tflite"
+//    }
+//
+//    sourceSets.main {
+//        assets.srcDirs = ['assets']
+//    }
+//}
+//
+//androidExtensions {
+//    experimental = true
+//}
+//
+//dependencies {
+//    implementation 'com.android.volley:volley:1.2.1'
+//    implementation 'com.google.android.material:material:1.4.0'
+//    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+//    implementation "androidx.annotation:annotation:1.3.0"
+//    implementation "androidx.core:core-ktx:1.7.0"
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
+//    implementation 'androidx.preference:preference-ktx:1.1.1'
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//
+////    // CameraX core library
+////    def camerax_version = "1.4.0"
+////    implementation "androidx.camera:camera-core:$camerax_version"
+////    implementation "androidx.camera:camera-camera2:$camerax_version"
+////    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+////    implementation "androidx.camera:camera-video:$camerax_version"
+////    implementation "androidx.camera:camera-view:$camerax_version"
+////    implementation "androidx.camera:camera-extensions:$camerax_version"
+//
+//    def cameraxVersion = "1.3.0-rc01"
+//
+//    implementation("androidx.camera:camera-core:$cameraxVersion")
+//    implementation("androidx.camera:camera-camera2:$cameraxVersion")
+//    implementation("androidx.camera:camera-lifecycle:$cameraxVersion")
+//    implementation("androidx.camera:camera-video:$cameraxVersion")
+//
+//    implementation("androidx.camera:camera-view:$cameraxVersion")
+//    implementation("androidx.camera:camera-extensions:$cameraxVersion")
+//
+//    // Barcode model
+//    implementation 'com.google.mlkit:barcode-scanning:17.0.3'
+//
+//    // Object feature and model
+//    implementation 'com.google.mlkit:object-detection:17.0.0'
+//
+//    // Custom model
+//    implementation 'com.google.mlkit:object-detection-custom:17.0.0'
+//
+//    api 'com.google.guava:guava:30.1-jre'
+//}
+
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-parcelize'
+
 
 android {
-    namespace "com.google.mlkit.md" // Use your package name from AndroidManifest.xml
+    namespace "com.google.mlkit.md"
 
-    // Update compileSdkVersion and targetSdkVersion
     compileSdkVersion 34
     defaultConfig {
         applicationId "com.google.mlkit.md"
         minSdkVersion 21
-        targetSdkVersion 34 // Updated from 31 to 33
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -39,10 +128,11 @@ android {
     sourceSets.main {
         assets.srcDirs = ['assets']
     }
-}
 
-androidExtensions {
-    experimental = true
+    // Enable View Binding
+    viewBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -55,14 +145,13 @@ dependencies {
     implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    // CameraX core library
-    def camerax_version = "1.4.0"
-    implementation "androidx.camera:camera-core:$camerax_version"
-    implementation "androidx.camera:camera-camera2:$camerax_version"
-    implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-video:$camerax_version"
-    implementation "androidx.camera:camera-view:$camerax_version"
-    implementation "androidx.camera:camera-extensions:$camerax_version"
+    def cameraxVersion = "1.3.0-rc01"
+    implementation("androidx.camera:camera-core:$cameraxVersion")
+    implementation("androidx.camera:camera-camera2:$cameraxVersion")
+    implementation("androidx.camera:camera-lifecycle:$cameraxVersion")
+    implementation("androidx.camera:camera-video:$cameraxVersion")
+    implementation("androidx.camera:camera-view:$cameraxVersion")
+    implementation("androidx.camera:camera-extensions:$cameraxVersion")
 
     // Barcode model
     implementation 'com.google.mlkit:barcode-scanning:17.0.3'
