can scan, store uri locally then can show replay after search

--- a/android/material-showcase/app/src/main/AndroidManifest.xml
+++ b/android/material-showcase/app/src/main/AndroidManifest.xml
@@ -65,6 +65,14 @@
         android:label="@string/settings_title"
         android:screenOrientation="portrait"/>
 
+    <!-- Barcode Search Activity -->
+    <activity
+        android:name="com.google.mlkit.md.BarcodeSearchActivity"
+        android:exported="false"
+        android:screenOrientation="portrait"/>
+
+
+
   </application>
 </manifest>
 
